--- a/lms/E2-Iris/04 final_projec_wine.ipynb
+++ b/lms/E2-Iris/04 final_projec_wine.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# load-digit  손글시 분류\n",
-    "\n",
-    "#### 0~9까지 열 가지 카테고리   \n",
+    "# wine 분류\n",
     "\n",
     "\n",
     "\n",
@@ -41,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1.\n",
     "\n",
     "#library\n",
-    "from sklearn.datasets import load_digits #data\n",
+    "from sklearn.datasets import load_wine #data\n",
     "from sklearn.model_selection import train_test_split #data select\n",
     "from sklearn.metrics import classification_report #\n",
     "\n",
@@ -63,83 +61,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "#2. data load\n",
-    "digits = load_digits()\n"
+    "wines = load_wine()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['data', 'target', 'target_names', 'images', 'DESCR'])"
+       "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names'])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#2-1 \n",
-    "digits.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1797, 64)\n"
-     ]
-    }
-   ],
-   "source": [
-    "#2-2  data shape 조회\n",
-    "digits_data = digits.data\n",
-    "print(digits_data.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#2-3  data shape 조회\n",
-    "digits_feature = digits.feature_names\n",
-    "print(digits_data.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 2 ... 8 9 8]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#2-4 data label 조회\n",
-    "digits_label = digits.target\n",
-    "print (digits_label)"
+    "wines.keys()"
    ]
   },
   {
@@ -151,34 +100,95 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 2 3 4 5 6 7 8 9]\n"
+      "(178, 13)\n"
      ]
     }
    ],
    "source": [
-    "#2-5 data target name 조회\n",
-    "digits.target_names\n",
-    "print(digits.target_names)"
+    "#2-2  data shape 조회\n",
+    "wines_data = wines.data\n",
+    "print(wines_data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train 개수:  1437 , X_test 개수:  360\n"
+      "(178, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2-3  data shape 조회\n",
+    "wines_feature = wines.feature_names\n",
+    "print(wines_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2-4 data label 조회\n",
+    "wines_label = wines.target\n",
+    "print (wines_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['class_0' 'class_1' 'class_2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2-5 data target name 조회\n",
+    "wines.target_names\n",
+    "print(wines.target_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train 개수:  142 , X_test 개수:  36\n"
      ]
     }
    ],
    "source": [
     "#3 train data / test data crate\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(digits_data,\n",
-    "                                                    digits_label,\n",
+    "x_train, x_test, y_train, y_test = train_test_split(wines_data,\n",
+    "                                                    wines_label,\n",
     "                                                    test_size = 0.2,\n",
     "                                                    random_state = 15)\n",
     "\n",
@@ -188,16 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((1437, 64), (1437,))"
+       "((142, 13), (142,))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,16 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((360, 64), (360,))"
+       "((36, 13), (36,))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,20 +262,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages/sklearn/linear_model/_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "                   intercept_scaling=1, l1_ratio=None, max_iter=2000,\n",
-       "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
-       "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
-       "                   warm_start=False)"
+       "LogisticRegression(max_iter=2000)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,21 +304,6 @@
     "# SGD Classifier \n",
     "# Logistic Regression \n",
     "\n",
-    "print(\"disition Tree report\")\n",
-    "print(classification_report(y_test, decision_tree_pred))\n",
-    "\n",
-    "print(\"Random Forest  report\")\n",
-    "print(classification_report(y_test, random_forest_pred))\n",
-    "\n",
-    "print(\"SVM report\")\n",
-    "print(classification_report(y_test, svm_pred))\n",
-    "\n",
-    "print(\"SGD Classifier report\")\n",
-    "print(classification_report(y_test, sgd_pred))\n",
-    "      \n",
-    "print(\"Logistic Regression report\")\n",
-    "print(classification_report(y_test, logistic_pred))\n",
-    "\n",
     "decision_tree_model.fit(x_train, y_train)\n",
     "random_forest_model.fit(x_train, y_train)\n",
     "svm_model.fit(x_train, y_train)\n",
@@ -308,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -340,93 +345,66 @@
       "disition Tree report\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.94      0.97        31\n",
-      "           1       0.82      0.82      0.82        38\n",
-      "           2       0.72      0.87      0.79        38\n",
-      "           3       0.85      0.81      0.83        27\n",
-      "           4       0.97      0.78      0.86        41\n",
-      "           5       0.82      0.89      0.85        35\n",
-      "           6       0.85      0.89      0.87        38\n",
-      "           7       0.91      0.91      0.91        34\n",
-      "           8       0.74      0.74      0.74        35\n",
-      "           9       0.83      0.79      0.81        43\n",
+      "           0       1.00      1.00      1.00        12\n",
+      "           1       0.85      0.92      0.88        12\n",
+      "           2       0.91      0.83      0.87        12\n",
       "\n",
-      "    accuracy                           0.84       360\n",
-      "   macro avg       0.85      0.84      0.84       360\n",
-      "weighted avg       0.85      0.84      0.84       360\n",
+      "    accuracy                           0.92        36\n",
+      "   macro avg       0.92      0.92      0.92        36\n",
+      "weighted avg       0.92      0.92      0.92        36\n",
       "\n",
       "Random Forest  report\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.97      0.94      0.95        31\n",
-      "           1       0.95      0.97      0.96        38\n",
-      "           2       1.00      1.00      1.00        38\n",
-      "           3       1.00      0.96      0.98        27\n",
-      "           4       0.95      1.00      0.98        41\n",
-      "           5       0.97      1.00      0.99        35\n",
-      "           6       1.00      0.95      0.97        38\n",
-      "           7       1.00      1.00      1.00        34\n",
-      "           8       0.94      0.97      0.96        35\n",
-      "           9       1.00      0.98      0.99        43\n",
+      "           0       1.00      1.00      1.00        12\n",
+      "           1       1.00      1.00      1.00        12\n",
+      "           2       1.00      1.00      1.00        12\n",
       "\n",
-      "    accuracy                           0.98       360\n",
-      "   macro avg       0.98      0.98      0.98       360\n",
-      "weighted avg       0.98      0.98      0.98       360\n",
+      "    accuracy                           1.00        36\n",
+      "   macro avg       1.00      1.00      1.00        36\n",
+      "weighted avg       1.00      1.00      1.00        36\n",
       "\n",
       "SVM report\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.97      0.98        31\n",
-      "           1       0.95      1.00      0.97        38\n",
-      "           2       1.00      1.00      1.00        38\n",
-      "           3       0.96      0.96      0.96        27\n",
-      "           4       0.98      0.98      0.98        41\n",
-      "           5       1.00      1.00      1.00        35\n",
-      "           6       1.00      1.00      1.00        38\n",
-      "           7       1.00      1.00      1.00        34\n",
-      "           8       0.97      0.94      0.96        35\n",
-      "           9       0.98      0.98      0.98        43\n",
+      "           0       0.79      0.92      0.85        12\n",
+      "           1       0.50      0.92      0.65        12\n",
+      "           2       0.00      0.00      0.00        12\n",
       "\n",
-      "    accuracy                           0.98       360\n",
-      "   macro avg       0.98      0.98      0.98       360\n",
-      "weighted avg       0.98      0.98      0.98       360\n",
+      "    accuracy                           0.61        36\n",
+      "   macro avg       0.43      0.61      0.50        36\n",
+      "weighted avg       0.43      0.61      0.50        36\n",
       "\n",
       "SGD Classifier report\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.97      0.98        31\n",
-      "           1       0.93      0.97      0.95        38\n",
-      "           2       1.00      1.00      1.00        38\n",
-      "           3       0.96      0.85      0.90        27\n",
-      "           4       0.98      0.98      0.98        41\n",
-      "           5       0.97      0.91      0.94        35\n",
-      "           6       1.00      0.97      0.99        38\n",
-      "           7       0.97      0.97      0.97        34\n",
-      "           8       0.97      0.89      0.93        35\n",
-      "           9       0.80      0.95      0.87        43\n",
+      "           0       0.61      0.92      0.73        12\n",
+      "           1       0.64      0.75      0.69        12\n",
+      "           2       0.50      0.17      0.25        12\n",
       "\n",
-      "    accuracy                           0.95       360\n",
-      "   macro avg       0.96      0.95      0.95       360\n",
-      "weighted avg       0.95      0.95      0.95       360\n",
+      "    accuracy                           0.61        36\n",
+      "   macro avg       0.58      0.61      0.56        36\n",
+      "weighted avg       0.58      0.61      0.56        36\n",
       "\n",
       "Logistic Regression report\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.97      0.98        31\n",
-      "           1       0.95      0.97      0.96        38\n",
-      "           2       1.00      0.97      0.99        38\n",
-      "           3       0.96      0.93      0.94        27\n",
-      "           4       0.93      1.00      0.96        41\n",
-      "           5       0.94      0.97      0.96        35\n",
-      "           6       1.00      0.97      0.99        38\n",
-      "           7       1.00      1.00      1.00        34\n",
-      "           8       0.94      0.94      0.94        35\n",
-      "           9       0.98      0.95      0.96        43\n",
+      "           0       1.00      0.92      0.96        12\n",
+      "           1       0.86      1.00      0.92        12\n",
+      "           2       1.00      0.92      0.96        12\n",
       "\n",
-      "    accuracy                           0.97       360\n",
-      "   macro avg       0.97      0.97      0.97       360\n",
-      "weighted avg       0.97      0.97      0.97       360\n",
+      "    accuracy                           0.94        36\n",
+      "   macro avg       0.95      0.94      0.95        36\n",
+      "weighted avg       0.95      0.94      0.95        36\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
    ],
@@ -459,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -467,60 +445,25 @@
      "output_type": "stream",
      "text": [
       "disition Tree report\n",
-      "[[29  0  0  0  0  0  0  0  2  0]\n",
-      " [ 0 31  3  1  1  0  1  0  1  0]\n",
-      " [ 0  1 33  1  0  1  0  0  1  1]\n",
-      " [ 0  0  0 22  0  1  1  0  2  1]\n",
-      " [ 0  0  0  1 32  0  4  3  0  1]\n",
-      " [ 0  0  3  0  0 31  0  0  1  0]\n",
-      " [ 0  1  2  0  0  1 34  0  0  0]\n",
-      " [ 0  0  0  1  0  0  0 31  0  2]\n",
-      " [ 0  2  3  0  0  2  0  0 26  2]\n",
-      " [ 0  3  2  0  0  2  0  0  2 34]]\n",
+      "[[12  0  0]\n",
+      " [ 0 11  1]\n",
+      " [ 0  2 10]]\n",
       "Random Forest  report\n",
-      "[[29  0  0  0  2  0  0  0  0  0]\n",
-      " [ 0 37  0  0  0  1  0  0  0  0]\n",
-      " [ 0  0 38  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0 26  0  0  0  0  1  0]\n",
-      " [ 0  0  0  0 41  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0 35  0  0  0  0]\n",
-      " [ 1  1  0  0  0  0 36  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0 34  0  0]\n",
-      " [ 0  1  0  0  0  0  0  0 34  0]\n",
-      " [ 0  0  0  0  0  0  0  0  1 42]]\n",
+      "[[12  0  0]\n",
+      " [ 0 12  0]\n",
+      " [ 0  0 12]]\n",
       "SVM report\n",
-      "[[30  0  0  0  1  0  0  0  0  0]\n",
-      " [ 0 38  0  0  0  0  0  0  0  0]\n",
-      " [ 0  0 38  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0 26  0  0  0  0  1  0]\n",
-      " [ 0  0  0  0 40  0  0  0  0  1]\n",
-      " [ 0  0  0  0  0 35  0  0  0  0]\n",
-      " [ 0  0  0  0  0  0 38  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0 34  0  0]\n",
-      " [ 0  2  0  0  0  0  0  0 33  0]\n",
-      " [ 0  0  0  1  0  0  0  0  0 42]]\n",
+      "[[11  1  0]\n",
+      " [ 1 11  0]\n",
+      " [ 2 10  0]]\n",
       "SGD Classifier report\n",
-      "[[30  0  0  0  1  0  0  0  0  0]\n",
-      " [ 0 37  0  0  0  0  0  0  0  1]\n",
-      " [ 0  0 38  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0 23  0  0  0  0  1  3]\n",
-      " [ 0  0  0  0 40  0  0  0  0  1]\n",
-      " [ 0  0  0  0  0 32  0  0  0  3]\n",
-      " [ 0  0  0  0  0  1 37  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0 33  0  1]\n",
-      " [ 0  3  0  0  0  0  0  0 31  1]\n",
-      " [ 0  0  0  1  0  0  0  1  0 41]]\n",
+      "[[11  0  1]\n",
+      " [ 2  9  1]\n",
+      " [ 5  5  2]]\n",
       "Logistic Regression report\n",
-      "[[30  0  0  0  1  0  0  0  0  0]\n",
-      " [ 0 37  0  0  1  0  0  0  0  0]\n",
-      " [ 0  1 37  0  0  0  0  0  0  0]\n",
-      " [ 0  0  0 25  0  1  0  0  1  0]\n",
-      " [ 0  0  0  0 41  0  0  0  0  0]\n",
-      " [ 0  0  0  0  0 34  0  0  0  1]\n",
-      " [ 0  1  0  0  0  0 37  0  0  0]\n",
-      " [ 0  0  0  0  0  0  0 34  0  0]\n",
-      " [ 0  0  0  0  1  1  0  0 33  0]\n",
-      " [ 0  0  0  1  0  0  0  0  1 41]]\n"
+      "[[11  1  0]\n",
+      " [ 0 12  0]\n",
+      " [ 0  1 11]]\n"
      ]
     }
    ],
@@ -555,6 +498,17 @@
    "source": [
     "# 8 결론 및 코멘트\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "미완....\n",
+    "\n",
+    "score 가 가장 높은 건  모델이 가장 높았다.\n",
+    "\n",
+    "학습된 모델들의 테스트데이터 예측 결과를 어떻게 해석해야 할까요? 모델의 성능을 평가하는 지표로는 무엇이 좋을까요? sklearn.metrics 에서 제공하는 평가지표 중 적절한 것을 선택해 보세요. 선택하신 이유도 설명해 주세요."
    ]
   },
   {
