--- a/lms/E2-Iris/03-final_projec_digits.ipynb
+++ b/lms/E2-Iris/03-final_projec_digits.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1 . digit : https://github.com/ittapa/AIFFEL_LSG/blob/master/lms/E2-Iris/03-final_projec_digits.ipynb\n",
+    "\n",
+    "2 . wine : https://github.com/ittapa/AIFFEL_LSG/blob/master/lms/E2-Iris/04-final_project_wine.ipynb\n",
+    "\n",
+    "3 . cancer : https://github.com/ittapa/AIFFEL_LSG/blob/master/lms/E2-Iris/05-final_project_cancer.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# load-digit  \n",
     "\n",
     "\n",
