classification project result upload

--- a/lms/E2-Iris/05-final_project_cancer.ipynb
+++ b/lms/E2-Iris/05-final_project_cancer.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,13 @@
     "from sklearn import svm #SVM\n",
     "from sklearn.linear_model import SGDClassifier #SGD\n",
     "from sklearn.linear_model import LogisticRegression #logixitc Regressioin\n",
-    "from sklearn.metrics import confusion_matrix # \n"
+    "from sklearn.metrics import confusion_matrix # \n",
+    "from sklearn.metrics import recall_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +82,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename'])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +219,7 @@
        "((455, 30), (455,))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +240,7 @@
        "((114, 30), (114,))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,36 +268,22 @@
     "random_forest_model = RandomForestClassifier(random_state=32)\n",
     "svm_model = svm.SVC()\n",
     "sgd_model = SGDClassifier()\n",
-    "logistic_model = LogisticRegression(max_iter = 2000) # defult 값이 100인데, 분석 data 개수가 1437개여서 명시적 지정\n",
+    "logistic_model = LogisticRegression(max_iter = 4000) # defult 값이 100인데, 분석 data 개수가 1437개여서 명시적 지정\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/aiffel0042/anaconda3/envs/aiffel/lib/python3.7/site-packages/sklearn/linear_model/_logistic.py:764: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "LogisticRegression(max_iter=2000)"
+       "LogisticRegression(max_iter=4000)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -388,12 +375,12 @@
       "SGD Classifier report\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.66      0.85      0.74        39\n",
-      "           1       0.91      0.77      0.83        75\n",
+      "           0       0.80      0.85      0.83        39\n",
+      "           1       0.92      0.89      0.91        75\n",
       "\n",
-      "    accuracy                           0.80       114\n",
-      "   macro avg       0.78      0.81      0.79       114\n",
-      "weighted avg       0.82      0.80      0.80       114\n",
+      "    accuracy                           0.88       114\n",
+      "   macro avg       0.86      0.87      0.87       114\n",
+      "weighted avg       0.88      0.88      0.88       114\n",
       "\n",
       "Logistic Regression report\n",
       "              precision    recall  f1-score   support\n",
@@ -437,26 +424,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "disition Tree report\n",
+      "\n",
+      " disition Tree cm\n",
       "[[34  5]\n",
       " [ 1 74]]\n",
-      "Random Forest  report\n",
+      "\n",
+      " Random Forest cm\n",
       "[[34  5]\n",
       " [ 2 73]]\n",
-      "SVM report\n",
+      "\n",
+      " SVM report\n",
       "[[26 13]\n",
       " [ 2 73]]\n",
-      "SGD Classifier report\n",
+      "\n",
+      " SGD Classifier cm\n",
       "[[33  6]\n",
-      " [17 58]]\n",
-      "Logistic Regression report\n",
+      " [ 8 67]]\n",
+      "\n",
+      " Logistic Regression cm\n",
       "[[32  7]\n",
       " [ 5 70]]\n"
      ]
@@ -471,20 +463,88 @@
     "# SGD Classifier \n",
     "# Logistic Regression \n",
     "\n",
-    "print(\"disition Tree report\")\n",
-    "print(confusion_matrix(y_test, decision_tree_pred))\n",
+    "print(\"\\n disition Tree cm\")\n",
+    "disition_cm = confusion_matrix(y_test, decision_tree_pred)\n",
+    "print(disition_cm)\n",
     "\n",
-    "print(\"Random Forest  report\")\n",
-    "print(confusion_matrix(y_test, random_forest_pred))\n",
+    "print(\"\\n Random Forest cm\")\n",
+    "random_forest_cm = confusion_matrix(y_test, random_forest_pred)\n",
+    "print(random_forest_cm)\n",
     "\n",
-    "print(\"SVM report\")\n",
-    "print(confusion_matrix(y_test, svm_pred))\n",
+    "print(\"\\n SVM cm\")\n",
+    "svm_cm = confusion_matrix(y_test, svm_pred)\n",
+    "print(svm_cm)\n",
     "\n",
-    "print(\"SGD Classifier report\")\n",
-    "print(confusion_matrix(y_test, sgd_pred))\n",
+    "print(\"\\n SGD Classifier cm\")\n",
+    "sgd_cm = confusion_matrix(y_test, sgd_pred)\n",
+    "print(sgd_cm)\n",
     "      \n",
-    "print(\"Logistic Regression report\")\n",
-    "print(confusion_matrix(y_test, logistic_pred))"
+    "print(\"\\n Logistic Regression cm\")\n",
+    "logisitc_cm = confusion_matrix(y_test, logistic_pred)\n",
+    "print(logisitc_cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " disition Tree recall\n",
+      "0.9866666666666667\n",
+      "\n",
+      " Random Forest recall\n",
+      "0.9733333333333334\n",
+      "\n",
+      " SVM recall\n",
+      "0.9733333333333334\n",
+      "\n",
+      " SGD Classifier recall\n",
+      "0.8933333333333333\n",
+      "\n",
+      " Logistic Regression recall\n",
+      "0.9333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7-3 모델별 5차 행렬 계산\n",
+    "\n",
+    "# disition Tree \n",
+    "# Random Forest \n",
+    "# SVM \n",
+    "# SGD Classifier \n",
+    "# Logistic Regression \n",
+    "\n",
+    "\n",
+    "print(\"\\n disition Tree recall\")\n",
+    "#disition_recall = disition_cm[0,0] / (disition_cm[0,0] + disition_cm[0,1])\n",
+    "disition_recall = recall_score(y_test, decision_tree_pred)\n",
+    "print(disition_recall)\n",
+    "\n",
+    "print(\"\\n Random Forest recall\")\n",
+    "#random_forest_recall =  random_forest_cm[0,0] / (random_forest_cm[0,0] + random_forest_cm[0,1])\n",
+    "random_forest_recall = recall_score(y_test, random_forest_pred)\n",
+    "print(random_forest_recall)\n",
+    "\n",
+    "print(\"\\n SVM recall\")\n",
+    "#svm_recall =  svm_cm[0,0] / (svm_cm[0,0] + svm_cm[0,1])\n",
+    "svm_recall = recall_score(y_test, svm_pred)\n",
+    "print(svm_recall)\n",
+    "\n",
+    "print(\"\\n SGD Classifier recall\")\n",
+    "#sgd_recall =  sgd_cm[0,0] / (sgd_cm[0,0] + sgd_cm[0,1])\n",
+    "sgd_recall = recall_score(y_test, sgd_pred)\n",
+    "print(sgd_recall)\n",
+    "      \n",
+    "print(\"\\n Logistic Regression recall\")\n",
+    "#logisitc_recall =  logisitc_cm[0,0] / (logisitc_cm[0,0] + logisitc_cm[0,1])\n",
+    "logisitc_recall =  recall_score(y_test, logistic_pred)\n",
+    "print(logisitc_recall)"
    ]
   },
   {
@@ -496,13 +556,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "암같은 질병의 경우 상황 자체만 보면,\n",
+    "(실제)  - (예측)\n",
+    "암에 걸림 - 암 진단\n",
+    "암에 걸림 - 정상\n",
+    "암 아님 - 암진단\n",
+    "암 아님 - 정상\n",
+    "\n",
+    "위와 같은 상황이 있는데, 질병이기때문에 질병에 실제 사람이 질병에 걸렸을 때가 가장 중요한 상황이다.\n",
+    "실제로 암이 아닌 사람은 정상판정을 받으면 좋은거고, 예측이 암 진단으로 나온다면 마음은 아프겠지만, 실제 몸 건강 상황이 악화되는 것은 아니다.그러나 가장 중요한 상황인 암에 걸렸을 때 암 진단을 받는 것은 올바른 상황이자만 반대로 정상으로 판정이 나와 버린다면 가장 안 좋은 상황이 된다. 자기 몸 건강 상황도 모른채 치료도 못 받고 고통받게 되기 때문이다.\n",
+    "\n",
+    "그래서 실제 암 일때, 암을 진단하는 것이 중요하기 때문에\n",
+    "성능지표 중 Recall(sensitivity) 가 중요하다.\n",
+    "\n",
+    "recall 기준 의사결정 트리가 모델 중 높은 수치가 나왔습니다.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "(미완)\n"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 질문거리\n",
+    "\n",
+    "1. LogisticRegression(max_iter=4000)  : max_iter 값 명시에 대한 정리\n",
+    "2. 내장 함수 사용 관련\n",
+    "3. 오차행렬 숫자들의 의미, 그리고 각 성능지표 계산과 함수 사용\n",
+    "4. support 의 의미\n",
+    "5. specificity 랑 negativ predicitve value 사용 안하는 이유...\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
