--- a/lms/01-EXPLORATION/E10-camera_sticker_app/01-basic.ipynb
+++ b/lms/01-EXPLORATION/E10-camera_sticker_app/01-basic.ipynb
@@ -99,11 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T00:59:18.524699Z",
-     "start_time": "2020-09-04T00:59:18.371337Z"
+     "end_time": "2020-09-04T05:43:10.162413Z",
+     "start_time": "2020-09-04T05:43:10.019737Z"
     }
    },
    "outputs": [],
@@ -126,11 +126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-03T07:54:07.415704Z",
-     "start_time": "2020-09-03T07:54:07.411558Z"
+     "end_time": "2020-09-04T05:43:10.325300Z",
+     "start_time": "2020-09-04T05:43:10.319692Z"
     }
    },
    "outputs": [],
@@ -151,11 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-03T07:53:35.196740Z",
-     "start_time": "2020-09-03T07:53:35.071247Z"
+     "end_time": "2020-09-04T05:43:10.772624Z",
+     "start_time": "2020-09-04T05:43:10.649714Z"
     }
    },
    "outputs": [
@@ -188,11 +188,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T00:59:24.873954Z",
-     "start_time": "2020-09-04T00:59:24.630828Z"
+     "end_time": "2020-09-04T05:43:11.269239Z",
+     "start_time": "2020-09-04T05:43:10.999694Z"
     }
    },
    "outputs": [],
@@ -205,11 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T00:59:25.235301Z",
-     "start_time": "2020-09-04T00:59:25.030787Z"
+     "end_time": "2020-09-04T05:43:11.481476Z",
+     "start_time": "2020-09-04T05:43:11.273958Z"
     }
    },
    "outputs": [],
@@ -229,11 +229,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T00:59:26.191321Z",
-     "start_time": "2020-09-04T00:59:26.060762Z"
+     "end_time": "2020-09-04T05:43:11.603730Z",
+     "start_time": "2020-09-04T05:43:11.486660Z"
     }
    },
    "outputs": [
@@ -324,11 +324,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T00:59:28.829745Z",
-     "start_time": "2020-09-04T00:59:28.828386Z"
+     "end_time": "2020-09-04T05:43:12.241139Z",
+     "start_time": "2020-09-04T05:43:12.239730Z"
     }
    },
    "outputs": [],
@@ -339,11 +339,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T00:59:30.722018Z",
-     "start_time": "2020-09-04T00:59:29.950724Z"
+     "end_time": "2020-09-04T05:43:13.201719Z",
+     "start_time": "2020-09-04T05:43:12.444914Z"
     }
    },
    "outputs": [],
@@ -358,11 +358,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T00:59:32.606600Z",
-     "start_time": "2020-09-04T00:59:32.600893Z"
+     "end_time": "2020-09-04T05:43:13.213412Z",
+     "start_time": "2020-09-04T05:43:13.207777Z"
     }
    },
    "outputs": [
@@ -371,7 +371,7 @@
      "output_type": "stream",
      "text": [
       "rectangles[[(236, 116) (390, 270)]]\n",
-      "points <_dlib_pybind11.full_object_detection object at 0x7fc09cb844b0>\n",
+      "points <_dlib_pybind11.full_object_detection object at 0x7f70a46fff30>\n",
       "points points[(238, 155), (240, 174), (243, 193), (247, 212), (253, 230), (264, 245), (277, 259), (293, 271), (310, 275), (327, 272), (343, 260), (356, 245), (367, 229), (373, 212), (378, 193), (381, 174), (383, 156), (253, 142), (262, 133), (274, 129), (288, 130), (300, 135), (327, 135), (340, 130), (353, 129), (366, 132), (375, 142), (313, 152), (313, 167), (312, 182), (311, 198), (297, 204), (304, 206), (312, 209), (319, 207), (327, 204), (268, 153), (276, 148), (286, 149), (294, 157), (285, 157), (275, 156), (333, 157), (341, 149), (351, 148), (360, 153), (352, 156), (342, 157), (282, 221), (293, 218), (304, 217), (313, 219), (321, 217), (332, 219), (342, 222), (332, 237), (321, 244), (312, 245), (303, 243), (292, 235), (285, 222), (304, 222), (313, 223), (321, 222), (339, 223), (321, 234), (312, 235), (304, 234)]\n",
       "68\n"
      ]
@@ -395,11 +395,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T00:59:34.076871Z",
-     "start_time": "2020-09-04T00:59:33.960704Z"
+     "end_time": "2020-09-04T05:43:13.334653Z",
+     "start_time": "2020-09-04T05:43:13.218620Z"
     }
    },
    "outputs": [
@@ -454,11 +454,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T03:20:39.325957Z",
-     "start_time": "2020-09-04T03:20:39.321673Z"
+     "end_time": "2020-09-04T05:43:13.657760Z",
+     "start_time": "2020-09-04T05:43:13.653774Z"
     }
    },
    "outputs": [
@@ -503,11 +503,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T01:11:06.810753Z",
-     "start_time": "2020-09-04T01:11:06.807163Z"
+     "end_time": "2020-09-04T05:43:13.953140Z",
+     "start_time": "2020-09-04T05:43:13.948485Z"
     }
    },
    "outputs": [
@@ -532,11 +532,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T01:12:46.259698Z",
-     "start_time": "2020-09-04T01:12:46.256898Z"
+     "end_time": "2020-09-04T05:43:14.432632Z",
+     "start_time": "2020-09-04T05:43:14.430062Z"
     }
    },
    "outputs": [
@@ -554,17 +554,16 @@
     "refined_y = y - h       # top\n",
     "print ('(x,y) : (%d,%d)'%(refined_x, refined_y))\n",
     "\n",
-    "# y - 찍힘. ...이미지 밖으로 나갈수 도 있음.\n",
-    "\n"
+    "# y - 찍힘. ...이미지 밖으로 나갈수 도 있음.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T01:22:11.614538Z",
-     "start_time": "2020-09-04T01:22:11.612565Z"
+     "end_time": "2020-09-04T05:43:14.771725Z",
+     "start_time": "2020-09-04T05:43:14.769271Z"
     }
    },
    "outputs": [
@@ -584,11 +583,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T01:24:32.621616Z",
-     "start_time": "2020-09-04T01:24:32.619385Z"
+     "end_time": "2020-09-04T05:43:15.123586Z",
+     "start_time": "2020-09-04T05:43:15.121504Z"
     }
    },
    "outputs": [
@@ -609,11 +608,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T01:55:31.697817Z",
-     "start_time": "2020-09-04T01:55:31.693183Z"
+     "end_time": "2020-09-04T06:18:14.495343Z",
+     "start_time": "2020-09-04T06:18:14.489252Z"
     }
    },
    "outputs": [
@@ -628,7 +627,10 @@
       "img_sticker.shape[1]:  155\n",
       "\n",
       "\n",
-      "\n"
+      "\n",
+      "(734, 620, 3)\n",
+      "0 121 234 389\n",
+      "[]\n"
      ]
     }
    ],
@@ -641,24 +643,27 @@
     "print(\"refined_x\", refined_x)\n",
     "print(\"img_sticker.shape[1]: \", img_sticker.shape[1])\n",
     "print(\"\\n\\n\")\n",
+    "print(img_show.shape)\n",
     "\n",
+    "print(refined_y,img_sticker.shape[0], refined_x,refined_x+img_sticker.shape[1])\n",
     "# 스티커 영역 : \n",
     "sticker_area = img_show[refined_y:img_sticker.shape[0], refined_x:refined_x+img_sticker.shape[1]]\n",
     "\n",
     "#print(sticker_area,\"sticker_area\")\n",
-    "\n",
     "#  조건에 맞는 값의 색인 위치: np.where()\n",
     "img_show[refined_y:img_sticker.shape[0], refined_x:refined_x+img_sticker.shape[1]] = \\\n",
-    "    np.where(img_sticker==0,sticker_area,img_sticker).astype(np.uint8)"
+    "    np.where(img_sticker==0,sticker_area,img_sticker).astype(np.uint8)\n",
+    "a = img_show[0:0, 2:5]\n",
+    "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T01:25:49.304252Z",
-     "start_time": "2020-09-04T01:25:49.184599Z"
+     "end_time": "2020-09-04T05:43:16.515892Z",
+     "start_time": "2020-09-04T05:43:16.397142Z"
     }
    },
    "outputs": [
@@ -683,11 +688,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T01:26:42.343601Z",
-     "start_time": "2020-09-04T01:26:42.227528Z"
+     "end_time": "2020-09-04T05:43:16.924561Z",
+     "start_time": "2020-09-04T05:43:16.809939Z"
     }
    },
    "outputs": [
@@ -716,6 +721,13 @@
     "plt.imshow(cv2.cvtColor(img_bgr, cv2.COLOR_BGR2RGB)) \n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
