--- a/FLIP-CODING/06/Q2.ipynb
+++ b/FLIP-CODING/06/Q2.ipynb
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-06T16:34:56.588449Z",
-     "start_time": "2020-09-06T16:34:56.581762Z"
+     "end_time": "2020-09-07T02:20:47.980745Z",
+     "start_time": "2020-09-07T02:20:47.976411Z"
     }
    },
    "outputs": [],
@@ -39,7 +39,7 @@
     "    for i in range(1, len(numbers)+1):\n",
     "        nl = [list(nl) for nl in itertools.permutations(numbers, i)]\n",
     "        numlist.extend(nl)    \n",
-    "    #print(numlist)\n",
+    "    print(numlist)\n",
     "    \n",
     "    # 조합별 합치고, 숫자로 변환\n",
     "    nums =[]\n",
@@ -73,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-06T16:34:57.103599Z",
-     "start_time": "2020-09-06T16:34:57.101316Z"
+     "end_time": "2020-09-07T02:20:28.444261Z",
+     "start_time": "2020-09-07T02:20:28.440455Z"
     }
    },
    "outputs": [
@@ -85,6 +85,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[['1'], ['7'], ['1', '7'], ['7', '1']]\n",
+      "['1']\n",
+      "['7']\n",
+      "['1', '7']\n",
+      "['7', '1']\n",
       "[1, 71, 17, 7]\n",
       "71\n",
       "17\n",
@@ -101,11 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-06T16:34:58.129848Z",
-     "start_time": "2020-09-06T16:34:58.124541Z"
+     "end_time": "2020-09-07T02:20:31.803846Z",
+     "start_time": "2020-09-07T02:20:31.799439Z"
     }
    },
    "outputs": [
@@ -113,6 +118,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[['0'], ['1'], ['1'], ['0', '1'], ['0', '1'], ['1', '0'], ['1', '1'], ['1', '0'], ['1', '1'], ['0', '1', '1'], ['0', '1', '1'], ['1', '0', '1'], ['1', '1', '0'], ['1', '0', '1'], ['1', '1', '0']]\n",
+      "['0']\n",
+      "['1']\n",
+      "['1']\n",
+      "['0', '1']\n",
+      "['0', '1']\n",
+      "['1', '0']\n",
+      "['1', '1']\n",
+      "['1', '0']\n",
+      "['1', '1']\n",
+      "['0', '1', '1']\n",
+      "['0', '1', '1']\n",
+      "['1', '0', '1']\n",
+      "['1', '1', '0']\n",
+      "['1', '0', '1']\n",
+      "['1', '1', '0']\n",
       "[0, 1, 101, 10, 11, 110]\n",
       "101\n",
       "11\n",
@@ -121,8 +142,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "n2 = \"011\"\n",
     "r2 = solution(n2)\n",
     "print(\"r2: \", r2)"
@@ -130,11 +149,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-06T16:39:39.116838Z",
-     "start_time": "2020-09-06T16:39:39.114006Z"
+     "end_time": "2020-09-07T01:22:33.958789Z",
+     "start_time": "2020-09-07T01:22:33.956079Z"
     }
    },
    "outputs": [
@@ -155,24 +174,24 @@
        " ('1', '1')]"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from itertools import permutations\n",
-    "a = list(permutations(list(\"0111\"),2)) # set으로 중복제거\n",
+    "a = list((permutations(list(\"0111\"),2))) # set으로 중복제거\n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-06T16:38:52.741216Z",
-     "start_time": "2020-09-06T16:38:52.735502Z"
+     "end_time": "2020-09-07T01:22:34.938225Z",
+     "start_time": "2020-09-07T01:22:34.935580Z"
     }
    },
    "outputs": [
@@ -182,7 +201,7 @@
        "[('0', '1'), ('0', '1'), ('0', '1'), ('1', '1'), ('1', '1'), ('1', '1')]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +347,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "t1 = [1,2]\n",
+    "t1.extend([1])\n",
+    "t1"
+   ]
   }
  ],
  "metadata": {
