--- a/FLIP-CODING/06/Q3.ipynb
+++ b/FLIP-CODING/06/Q3.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-06T17:04:39.022790Z",
-     "start_time": "2020-09-06T17:04:39.016124Z"
+     "end_time": "2020-09-07T02:13:11.988738Z",
+     "start_time": "2020-09-07T02:13:11.985407Z"
     }
    },
    "outputs": [],
@@ -28,18 +28,18 @@
     "def solution(brown, yellow):\n",
     "    \n",
     "    #yellow 의 shape\n",
-    "    y_sahpe = []\n",
+    "    y_shape = []\n",
     "    \n",
     "    # 약수들 구하기 / 절반 \n",
     "    # +1 len / +1 yello가 1일때,\n",
     "    for y in range(1, int(yellow/2)+2):\n",
     "        if yellow % y == 0:\n",
-    "            y_sahpe.append([y, int(yellow / y)])\n",
-    "    print(y_sahpe)\n",
+    "            y_shape.append([y, int(yellow / y)])\n",
+    "    print(y_shape)\n",
     "    \n",
     "    #누런영역 shape의 가로+2 새로+2가 전체 카펫크기\n",
     "    #전체 카펫 크기에서 누런 영역빼면 갈생영역\n",
-    "    for a in y_sahpe :\n",
+    "    for a in y_shape :\n",
     "        if (a[0]+2) * (a[1]+2) - yellow == brown:\n",
     "            return [a[1]+2, a[0]+2]\n",
     "       "
@@ -54,11 +54,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-06T17:11:08.221672Z",
-     "start_time": "2020-09-06T17:11:08.215558Z"
+     "end_time": "2020-09-07T02:13:12.946159Z",
+     "start_time": "2020-09-07T02:13:12.943175Z"
     }
    },
    "outputs": [
@@ -75,7 +75,7 @@
        "[4, 3]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-06T17:11:08.727847Z",
-     "start_time": "2020-09-06T17:11:08.721725Z"
+     "end_time": "2020-09-07T02:13:13.654510Z",
+     "start_time": "2020-09-07T02:13:13.651327Z"
     }
    },
    "outputs": [
@@ -110,7 +110,7 @@
        "[3, 3]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,11 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-06T17:11:23.679643Z",
-     "start_time": "2020-09-06T17:11:23.673651Z"
+     "end_time": "2020-09-07T02:04:21.558623Z",
+     "start_time": "2020-09-07T02:04:21.555344Z"
     }
    },
    "outputs": [
@@ -145,7 +145,7 @@
        "[8, 6]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,6 +156,29 @@
     "r3 = solution(b3, y3)\n",
     "r3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-07T02:04:33.182459Z",
+     "start_time": "2020-09-07T02:04:33.179934Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 1]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
