--- a/lms/01-EXPLORATION/E10-camera_sticker_app/01-basic.ipynb
+++ b/lms/01-EXPLORATION/E10-camera_sticker_app/01-basic.ipynb
@@ -652,9 +652,7 @@
     "#print(sticker_area,\"sticker_area\")\n",
     "#  조건에 맞는 값의 색인 위치: np.where()\n",
     "img_show[refined_y:img_sticker.shape[0], refined_x:refined_x+img_sticker.shape[1]] = \\\n",
-    "    np.where(img_sticker==0,sticker_area,img_sticker).astype(np.uint8)\n",
-    "a = img_show[0:0, 2:5]\n",
-    "print(a)"
+    "    np.where(img_sticker==0,sticker_area,img_sticker).astype(np.uint8)\n"
    ]
   },
   {
@@ -771,7 +769,7 @@
     "width": "255.391px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
