--- a/lms/02-FUNDAMENTAL/F32-embedding_recurrent/01-basic.ipynb
+++ b/lms/02-FUNDAMENTAL/F32-embedding_recurrent/01-basic.ipynb
@@ -424,6 +424,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 양방향(Bidirectional) RNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-10T05:58:07.892139Z",
+     "start_time": "2020-09-10T05:58:06.290090Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입력 문장 데이터 형태: (1, 5, 100)\n",
+      "Bidirectional RNN 결과 (최종 Step Output): (1, 5, 128)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "sentence = \"What time is it ?\"\n",
+    "dic = {\n",
+    "    \"is\": 0,\n",
+    "    \"it\": 1,\n",
+    "    \"What\": 2,\n",
+    "    \"time\": 3,\n",
+    "    \"?\": 4\n",
+    "}\n",
+    "\n",
+    "sentence_tensor = tf.constant([[dic[word] for word in sentence.split()]])\n",
+    "\n",
+    "embedding_layer = tf.keras.layers.Embedding(input_dim=len(dic), output_dim=100)\n",
+    "emb_out = embedding_layer(sentence_tensor)\n",
+    "\n",
+    "print(\"입력 문장 데이터 형태:\", emb_out.shape)\n",
+    "\n",
+    "bi_rnn = \\\n",
+    "tf.keras.layers.Bidirectional(\n",
+    "    tf.keras.layers.SimpleRNN(units=64, use_bias=False, return_sequences=True)\n",
+    ")\n",
+    "bi_out = bi_rnn(emb_out)\n",
+    "\n",
+    "print(\"Bidirectional RNN 결과 (최종 Step Output):\", bi_out.shape)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -460,7 +514,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
