--- a/FLIP-CODING/07-greedy/Q3.ipynb
+++ b/FLIP-CODING/07-greedy/Q3.ipynb
@@ -23,11 +23,19 @@
     "    ALPHABET =\"ABCDEFGHIJKLMNOPQRSTUVWXYZ\"\n",
     "    answer = 0\n",
     "    \n",
+    "    current_p = 0\n",
+    "    \n",
+    "    not_a_list = for \n",
+    "    \n",
     "    r = 'A' * len(name)\n",
     "    \n",
     "    for s in name:\n",
     "        #커서이동 최소이동..\n",
     "        # 이동 방향 찾기.\n",
+    "        \n",
+    "        #현재 위치에서 제일 가까운 위치 찾기\n",
+    "        current_p\n",
+    "        \n",
     "        \n",
     "        len(name)\n",
     "        answer+=1\n",
