--- a/FLIP-CODING/07-greedy/Q2.ipynb
+++ b/FLIP-CODING/07-greedy/Q2.ipynb
@@ -4,16 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. combinations (시간초과)\n"
+    "# q2 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. combinations (시간초과)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-13T22:38:15.600974Z",
-     "start_time": "2020-09-13T22:38:15.595515Z"
+     "end_time": "2020-09-14T04:35:29.309422Z",
+     "start_time": "2020-09-14T04:35:29.307055Z"
     }
    },
    "outputs": [],
@@ -46,6 +53,21 @@
     "테스트 11 〉\t통과 (0.01ms, 10.1MB)\n",
     "테스트 12 〉\t통과 (0.01ms, 10.2MB)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def solution(number, k):\n",
+    "    \n",
+    "    nlist = list(combinations(number, len(number)-k))\n",
+    "    \n",
+    "    #print (max(nlist))\n",
+    "    return \"\".join(max(nlist))"
    ]
   },
   {
