--- a/lms/01-EXPLORATION/E13-camera_webapp/03-final_project.ipynb
+++ b/lms/01-EXPLORATION/E13-camera_webapp/03-final_project.ipynb
@@ -612,6 +612,7 @@
    "metadata": {},
    "source": [
     "## 프로젝트 결과물\n",
+    "- 결과물 링크 : https://ittapa.github.io/tfjs_mobile/\n",
     "- 폴더 링크: https://github.com/ittapa/AIFFEL_LSG/tree/master/lms/01-EXPLORATION/E13-camera_webapp/02-project\n",
     "- 깃페이지 링크 : https://ittapa.github.io/tfjs_mobile\n",
     "\n",
