--- a/lms/01-EXPLORATION/E13-camera_webapp/03-final_project.ipynb
+++ b/lms/01-EXPLORATION/E13-camera_webapp/03-final_project.ipynb
@@ -617,11 +617,9 @@
     "- 깃페이지 링크 : https://ittapa.github.io/tfjs_mobile\n",
     "\n",
     "- 문제점\n",
-    "    - 얼굴영역이 아닌 전체처리: 이미지를 48x48로 리사이즈하기전에 face dectection을 통해 얼굴부분 영역만 골라낸 상태에서 48x48 리사이즈 후 예측모델에 투입.\n",
-    "    \n",
-    "    ```\n",
-    "    \n",
-    "    ```\n",
+    "    1. 얼굴영역이 아닌 전체처리: 이미지를 48x48로 리사이즈하기전에 face dectection을 통해 얼굴부분 영역만 골라낸 상태에서 48x48 리사이즈 후 예측모델에 투입.\n",
+    "    2.  최초 모델을 로딩하는데 오래걸림: 모델을 페이지 최초 로딩시 upload\n",
+    "\n",
     "    "
    ]
   },
