--- a/lms/01-EXPLORATION/E15-translator/02-word_level.ipynb
+++ b/lms/01-EXPLORATION/E15-translator/02-word_level.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 번역기 만들기"
+    "# 번역기 만들기\n",
+    "\n",
+    "- https://github.com/nr-ai/Aiffel_Exploration/blob/fee789670470342b318418031035d91e72c1b808/translator_fin.ipynb"
    ]
   },
   {
