--- a/lms/03-GoingDeeper/03-Object_Detection/02-prj.ipynb
+++ b/lms/03-GoingDeeper/03-Object_Detection/02-prj.ipynb
@@ -225,6 +225,212 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## library import"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-10-29T01:09:33.374396Z",
+     "start_time": "2020-10-29T01:09:31.134469Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# TensorFlow and tf.keras\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "\n",
+    "# Helper libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "import tensorflow_datasets as tfds\n",
+    "\n",
+    "import copy\n",
+    "import cv2\n",
+    "from PIL import Image, ImageDraw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## data set\n",
+    "- http://www.cvlibs.net/datasets/kitti/ \n",
+    "- kiti dataset "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-10-29T01:09:32.222Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mDownloading and preparing dataset kitti/3.2.0 (download: 11.71 GiB, generated: 5.27 GiB, total: 16.98 GiB) to /home/aiffel0042/tensorflow_datasets/kitti/3.2.0...\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "07faf84f6cdd4c50a84290a88c4bac3c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Dl Completed...', max=1.0, style=Progre…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e8661091c9954e3881da80684a6d488a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', description='Dl Size...', max=1.0, style=ProgressSty…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 다운로드에 매우 긴 시간이 소요됩니다. \n",
+    "import urllib3\n",
+    "urllib3.disable_warnings()\n",
+    "(ds_train, ds_test), ds_info = tfds.load(\n",
+    "    'kitti',\n",
+    "    split=['train', 'test'],\n",
+    "    shuffle_files=True,\n",
+    "    with_info=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-10-29T01:09:33.530Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fig = tfds.show_examples(ds_train, ds_info)11987 [1:05:52<26:49:47, 8.39s/ MiB]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-10-29T01:09:34.611Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ds_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data set 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TakeDataset = ds_train.take(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for example in TakeDataset:  \n",
+    "    print('--Example--')\n",
+    "    print(list(example.keys())) # example is `{'image': tf.Tensor, 'label': tf.Tensor}`\n",
+    "    image = example[\"image\"]\n",
+    "    filename = example[\"image/file_name\"].numpy().decode('utf-8')\n",
+    "    objects = example[\"objects\"]\n",
+    "\n",
+    "print('--objects--')\n",
+    "print(objects)\n",
+    "img = Image.fromarray(image.numpy())\n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### KIIT 데이터 셋\n",
+    "데이터셋 이해를 위한 예시\n",
+    "Values    Name      Description\n",
+    "----------------------------------------------------------------------------\n",
+    "```\n",
+    "   1    type         Describes the type of object: 'Car', 'Van', 'Truck',\n",
+    "                     'Pedestrian', 'Person_sitting', 'Cyclist', 'Tram',\n",
+    "                     'Misc' or 'DontCare'\n",
+    "   1    truncated    Float from 0 (non-truncated) to 1 (truncated), where\n",
+    "                     truncated refers to the object leaving image boundaries\n",
+    "   1    occluded     Integer (0,1,2,3) indicating occlusion state:\n",
+    "                     0 = fully visible, 1 = partly occluded\n",
+    "                     2 = largely occluded, 3 = unknown\n",
+    "   1    alpha        Observation angle of object, ranging [-pi..pi]\n",
+    "   4    bbox         2D bounding box of object in the image (0-based index):\n",
+    "                     contains left, top, right, bottom pixel coordinates\n",
+    "   3    dimensions   3D object dimensions: height, width, length (in meters)\n",
+    "   3    location     3D object location x,y,z in camera coordinates (in meters)\n",
+    "   1    rotation_y   Rotation ry around Y-axis in camera coordinates [-pi..pi]\n",
+    "   1    score        Only for results: Float, indicating confidence in\n",
+    "                     detection, needed for p/r curves, higher is better.\n",
+    " ```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
